# LoopForge

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.zh-CN.md  features.json  init.sh  loopforge-progress.md  mkdocs.yml  requirements-docs.txt  rexos-progress.md
.github/workflows/: auto-release-tag.yml  ci.yml  open-harness-watch.yml  provider-nightly.yml  release-dry-run.yml  release.yml
crates/loopforge-cli/: Cargo.toml
crates/rexos/: Cargo.toml
crates/rexos-cli/: Cargo.toml
crates/rexos-cli/src/: doctor.rs  main.rs
crates/rexos-daemon/: Cargo.toml
crates/rexos-harness/: Cargo.toml
crates/rexos-kernel/: Cargo.toml
crates/rexos-llm/: Cargo.toml
crates/rexos-llm/src/: anthropic.rs  bedrock.rs  dashscope.rs  driver.rs  gemini.rs  lib.rs  minimax.rs  openai_compat.rs  registry.rs  zhipu.rs
crates/rexos-llm/src/anthropic/: driver.rs  request.rs  response.rs  types.rs
crates/rexos-llm/src/bedrock/: document.rs  driver.rs  request.rs  response.rs
crates/rexos-llm/src/dashscope/: driver.rs  mapping.rs  types.rs
crates/rexos-llm/src/gemini/: driver.rs  request.rs  response.rs  types.rs
crates/rexos-llm/src/minimax/: driver.rs  mapping.rs  types.rs
crates/rexos-llm/src/openai_compat/: client.rs  mapping.rs  retry.rs  types.rs
crates/rexos-llm/src/registry/: build.rs  tests.rs
crates/rexos-llm/src/zhipu/: auth.rs  driver.rs  types.rs
crates/rexos-memory/: Cargo.toml
crates/rexos-memory/src/: chat.rs  kv.rs  lib.rs  messages.rs  schema.rs  store.rs  tests.rs  time.rs
crates/rexos-runtime/: Cargo.toml
crates/rexos-skills/: Cargo.toml
crates/rexos-skills/src/: installer.rs  lib.rs  loader.rs
crates/rexos-skills/tests/: installer_extract.rs  loader_discovery.rs  resolver_graph.rs
crates/rexos-tools/: Cargo.toml
docker/sandbox-browser/: Dockerfile  README.md  compose.yml  entrypoint.sh
docs/: alignment.md  versioning-and-release.md
docs-site/: index.md
docs-site/blog/: agent-memory-design.md  index.md  loopforge-vs-openfang-openclaw.md  mcp-integration-guide.md  openclaw-trend-x-playbook.md  personal-ai-engineer.md  rexos-vs-openfang-openclaw.md  safe-code-execution.md  what-is-loopforge.md
docs-site/examples/: daemon-health.md  harness-recipes.md  mechanical-edits.md  notifications.md  routing-recipes.md  sanity-check.md
docs-site/explanation/: concepts.md  reliability-baseline.md  runtime-architecture.md  security.md  why-loopforge.md
docs-site/how-to/: agent-team-playbook.md  browser-automation.md  browser-use-cases.md  daemon.md  faq.md  install.md  onboarding-troubleshooting.md  providers.md  troubleshooting.md  use-cases.md  windows.md
docs-site/overrides/: main.html
docs-site/reference/: cli.md  config.md  skills.md  tools.md
docs-site/tutorials/: first-day-starter-tasks.md  five-minute-outcomes.md  harness-long-task.md  new-user-walkthrough.md  quickstart-ollama.md  skills-quickstart.md
docs-site/zh/: index.md
docs-site/zh-CN/: index.md
docs/internal/: 2026-03-readability-okr.zh-CN.md  loopforge-network-security.md  public-docs-boundary.md  runtime-module-map.md
docs/marketing/: openclaw-trend-x-posts.en.txt  openclaw-trend-x-posts.zh-CN.txt
docs/plans/: 2026-03-01-browser-tools.md  2026-03-01-cargo-workspace-split.md  2026-03-01-dashscope-native-driver.md  2026-03-01-docs-site-refresh.md  2026-03-01-github-release-binaries.md  2026-03-01-glm-minimax-native-drivers.md  2026-03-01-harness-agent-os-alignment.md  2026-03-01-harness-openfang-alignment.md  2026-03-01-multi-provider-llm.md  2026-03-01-nvidia-nim-provider.md  2026-03-01-reserved-tools-implementation.md  2026-03-01-rexos-agent-os-design.md  2026-03-02-browser-cdp-acp-workflow-seo.md  2026-03-02-channel-send-outbox.md  2026-03-02-doctor-retries-remote-cdp.md  2026-03-02-reserved-tools-phase2.md  (+53 more)
scripts/: browser_sandbox_up.sh  check_i18n_parity.py  check_openharness_upstream.py  onboard_metrics_report.py  package_release.py  provider_health_report.py  resolve_release_tag.py  verify_release_consistency.py  verify_version_changelog.py  x_post_lint.py
src/: config.rs  lib.rs  main.rs
src/agent/: mod.rs
tests/: agent_loop.rs  llm_dashscope.rs  llm_zhipu.rs
(+935 files in other folders)
