[workspace]
resolver = "2"
members = [
    "crates/rexos",
    "crates/loopforge-cli",
    "crates/rexos-skills",
    "crates/rexos-daemon",
    "crates/rexos-harness",
    "crates/rexos-kernel",
    "crates/rexos-llm",
    "crates/rexos-memory",
    "crates/rexos-runtime",
    "crates/rexos-tools",
]

[workspace.package]
version = "1.3.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
# Pin to 0.8.0; newer 0.8.x releases raise rust-version above workspace MSRV 1.75.
axum = "=0.8.0"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "5"
flate2 = "1"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
semver = { version = "1", features = ["serde"] }
sha2 = "0.10"
tar = "0.4"
# Keep versions below the getrandom 0.4 / edition2024 transition so MSRV 1.75 checks stay green.
tempfile = ">=3.12, <3.26"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "time"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
uuid = { version = ">=1.10, <1.21", features = ["v4"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
