[package]
name = "rexos-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
rexos-kernel = { path = "../rexos-kernel" }
rexos-llm = { path = "../rexos-llm" }

[dev-dependencies]
tempfile.workspace = true
