[package]
name = "rexos-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
flate2.workspace = true
serde.workspace = true
tar.workspace = true
tempfile.workspace = true
toml.workspace = true
semver.workspace = true
zip.workspace = true

[dev-dependencies]
